--- a/app/index.html
+++ b/app/index.html
@@ -777,6 +777,70 @@ l0 1980 -2331 3 c-1282 1 -2334 -1 -2337 -5z" />
   </section>
 
   <!-- //////////footer//////// -->
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__col">
+            <div class="footer__col-title">About Company</div>
+            <div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
+              disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
+            <div class="footer__info">PO Box 16122 Collins Street West
+              Victoria 8007 Australia</div>
+            <a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
+          </div>
+
+          <div class="footer__col footer__col-menu">
+            <div class="footer__col-title">Join Our Community</div>
+            <ul class="footer__col-list">
+              <li><a href="#!">Home</a></li>
+              <li><a href="#!">Forums</a></li>
+              <li><a href="#!">Become an Author</a></li>
+              <li><a href="#!">Community Meetups</a></li>
+              <li><a href="#!">Become an Affiliate</a></li>
+            </ul>
+          </div>
+
+          <div class="footer__col footer__col-menu">
+            <div class="footer__col-title">Need Help?</div>
+            <ul class="footer__col-list">
+              <li><a href="#!">Help Center</a></li>
+              <li><a href="#!">Foxtar Market Terms</a></li>
+              <li><a href="#!">Author Terms</a></li>
+              <li><a href="#!">Foxtar Licenses</a></li>
+              <li><a href="#!">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <div class="footer__col">
+            <div class="footer__col-title">Follow Us On</div>
+            <ul class="footer__social-link">
+              <li><a class="link-fb" href="#!"></a></li>
+              <li><a class="link-tw" href="#!"></a></li>
+              <li><a class="link-yt" href="#!"></a></li>
+              <li><a class="link-pin" href="#!"></a></li>
+              <li><a class="link-lin" href="#!"></a></li>
+            </ul>
+            <div class="footer__form">
+              <div class="footer__form-title">Newsletter Sign Up!</div>
+              <form action="">
+                <input type="text" placeholder="E-mail Address">
+                <button type="submit"></button>
+              </form>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="footer__copy">
+        <div class="container">
+          <div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
+            respective owners.</div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
 
 
