--- a/app/new-items.html
+++ b/app/new-items.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     <div class="content page-content">
       <!-- ////////////header///////////// -->
-      <!-- <header class="header">
+      <header class="header">
         <div class="container">
           <div class="header__top">
             <div class="header__logo">
@@ -59,9 +59,9 @@
             </nav>
           </div>
         </div>
-      </header> -->
+      </header>
       <!-- //////////search//////// -->
-      <!-- <section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
+      <section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-10 col">
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- ////////////breadcrumbs///////////// -->
       <div class="breadcrumbs">
@@ -94,7 +94,8 @@
       </div>
 
       <!-- //////////product-page//////// -->
-      <section class="product-page">
+
+     <section class="product-page">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-3" col-md-6>
@@ -553,34 +554,7 @@
                       </div>
 
                     </div>
-                    <!-- ////////////////////////////////////// -->
-                    <!-- <div class="product__item ">
-                      <div class="product__item-wrapper">
-                        <a href="#!" class="product__item-img"
-                          style="background-image:url(images/product_item/wordpress.jpg)"></a>
-                        <div class="list__item-content">
-                          <div class="product__item-content">
-                            <div class="product__item-name">
-                              <a href="#!" class="product__item-title">Food Menu</a>
-                              <a href="#!" class="product__item-category">WordPress Plugin</a>
-                            </div>
-                            <div class="product__item-price">$20</div>
-                          </div>
-                          <div class="product__item-info">
-                            <a href="#!" class="product__item-author">
-                              <div class="avatar">
-                                <img src="images/user.png" alt="photo">
-                              </div>
-                              <span>Manilip</span>
-                            </a>
-                            <div class="product__item-star">
-                              <div class="rate-star"></div>(<span>05</span>)
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div> -->
-                    <!-- //////////////////////// -->
+
                   </div>
                   <div class="pagination">
                     <ul class="pagination__list">
@@ -593,11 +567,8 @@
                 </div>
               </div>
             </div>
-
           </div>
-        </div>
-
-    </div>
+        </div>   
     </section>
 
 
