--- a/app/new-items.html
+++ b/app/new-items.html
@@ -25,17 +25,143 @@
                 <img src="images/header_logo.png" alt="logo">
               </a>
             </div>
-            <div class="header__box">
+            <div class="header__content">
               <div class="header__text">
                 <a href="#"><span>Need help?</span></a>
                 Talk to an expert:
                 <a class="header__phone" href="+61383766284">+61 3 8376 6284</a>
               </div>
-              <div class="button__box">
-                <a href="#" class="baslet"></a>
-                <a href="#" class="header__btn header__btn-login">Login</a>
-                <a href="#" class="header__btn header__btn-register">Register</a>
+              <div class="header__box">
+                <div class="note__box">
+                  <a class="notification header__circle active icon-bell-o" href="#">
+                    <span>8</span>
+                  </a>
+                  <div class="message__menu note__menu">
+                    <div class="message__item icon-bell-o icons__color">
+                      <img src="images/content/menu_user1.jpg" alt="" class="message__img">
+                      <div class="message__info ">
+                        <div class="message__info-thema">Need WP Help!</div>
+                        <div class="message__info-date">01 Dec, 2016</div>
+                      </div>
+                    </div>
+                    <div class="message__item icon-bell-o">
+                      <img src="/images/content/menu_user2.jpg" alt="" class="message__img">
+                      <div class="message__info">
+                        <div class="message__info-thema">Need WP Help!</div>
+                        <div class="message__info-date">26 Nov, 2016</div>
+                      </div>
+                    </div>
+                    <div class="message__item icon-bell-o">
+                      <img src="/images/content/menu_user3.jpg" alt="" class="message__img">
+                      <div class="message__info">
+                        <div class="message__info-thema">Need WP Help!</div>
+                        <div class="message__info-date">26 Nov, 2016</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="message__box">
+                  <a class="message header__circle active icon-envelope-o" href="#">
+                    <span>5</span>
+                  </a>
+                  <div class="message__menu">
+                    <div class="message__item icon-envelope-o icons__color">
+                      <img src="images/content/menu_user1.jpg" alt="" class="message__img">
+                      <div class="message__info">
+                        <div class="message__info-name">Kazi Fahim</div>
+                        <div class="message__info-thema">Need WP Help!</div>
+                        <div class="message__info-date">01 Dec, 2016</div>
+                      </div>
+                      <span class=""></span>
+                    </div>
+                    <div class="message__item icon-envelope-o">
+                      <img src="/images/content/menu_user2.jpg" alt="" class="message__img">
+                      <div class="message__info">
+                        <div class="message__info-name">Richi Lenal
+                        </div>
+                        <div class="message__info-thema">Need WP Help!</div>
+                        <div class="message__info-date">26 Nov, 2016</div>
+                      </div>
+                      <span class=""></span>
+                    </div>
+                    <div class="message__item icon-mail-reply">
+                      <img src="/images/content/menu_user3.jpg" alt="" class="message__img">
+                      <div class="message__info">
+                        <div class="message__info-name">PsdBosS
+                        </div>
+                        <div class="message__info-thema">Need WP Help!</div>
+                      </div>
+                      <span class=""></span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="basket__box">
+                  <a class="basket header__circle active icon-shopping-cart" href="#">
+                    <span>8</span>
+                  </a>
+                  <div class="basket__menu">
+                    <div class="basket__item">
+                      <img src="/images/content/min_card1.jpg" alt="" class="basket__img">
+                      <div class="basket__info">
+                        <div class="basket__info-name">Grand Ballet</div>
+                        <div class="basket__info-thema">WordPress</div>
+                        <div class="basket__info-price">$59</div>
+                      </div>
+                    </div>
+                    <div class="basket__item">
+                      <img src="/images/content/min_card2.jpg" alt="" class="basket__img">
+                      <div class="basket__info">
+                        <div class="basket__info-name">Apple Device
+                        </div>
+                        <div class="basket__info-thema">WordPress</div>
+                        <div class="basket__info-price">$59</div>
+                      </div>
+                    </div>
+                    <div class="basket__summ">
+                      <div class="basket__title">
+                        <div class="basket__summ-total">Total</div>
+                        <div class="basket__summ-price">$118</div>
+                      </div>
+                      <div class="basket__summ-link">
+                        <a class="basket__btn" href="#!">Go to Cart</a>
+                        <a class="basket__btn basket__btn-checkout" href="#! class=">Go to Checkout</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="user__box">
+                  <a class="user" href="#">
+                    <div class="user__inner">
+                      <div class="user__images">
+                        <img src="images/content/h_user.jpg" alt="user">
+                      </div>
+                      <div class="user__info">
+                        <div class="user__name">Mike Hussy</div>
+                        <div class="user__cost">$171.00</div>
+                      </div>
+                    </div>
+                  </a>
+                  <div class="user__menu">
+                    <ul>
+                      <li><a class="angle-right" href="#">Profile Page</a></li>
+                      <li><a class="angle-right" href="#">Portfolio</a></li>
+                      <li><a class="angle-right" href="#">Account Setting</a></li>
+                      <li><a class="angle-right" href="#">Downloads</a></li>
+                      <li><a class="angle-right" href="#">Wishlist</a></li>
+                      <li><a class="angle-right" href="#">Upload Item</a></li>
+                      <li><a class="angle-right" href="#">Statement</a></li>
+                      <li><a class="angle-right" href="#">Withdraws</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <a href="#" class="header__btn header__btn-login header__btn header__btn-login--off">Login</a>
+                <a href="#" class="header__btn header__btn-register header__btn-login--off">Register</a>
+                <a href="#" class="header__btn header__btn-register header__btn-login--on">Logout</a>
               </div>
+              <div class="header__btn-menu icon-user"></div>
             </div>
           </div>
         </div>
@@ -43,6 +169,11 @@
         <div class="header__nav">
           <div class="container">
             <nav class="menu">
+              <div class="menu__btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
               <ul class="menu__list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -60,6 +191,7 @@
           </div>
         </div>
       </header>
+
       <!-- //////////search//////// -->
       <section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
         <div class="container">
@@ -95,7 +227,7 @@
 
       <!-- //////////product-page//////// -->
 
-     <section class="product-page">
+      <section class="product-page">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-3" col-md-6>
@@ -568,77 +700,77 @@
               </div>
             </div>
           </div>
-        </div>   
-    </section>
-
-
-
-
-  </div>
-  <!-- //////////footer//////// -->
-  <footer class="footer">
-    <div class="footer__content">
-      <div class="container">
-        <div class="footer__inner">
-          <div class="footer__col">
-            <div class="footer__col-title">About Company</div>
-            <div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
-              disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
-            <div class="footer__info">PO Box 16122 Collins Street West
-              Victoria 8007 Australia</div>
-            <a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
-          </div>
-
-          <div class="footer__col footer__col-menu">
-            <div class="footer__col-title">Join Our Community</div>
-            <ul class="footer__col-list">
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Forums</a></li>
-              <li><a href="#!">Become an Author</a></li>
-              <li><a href="#!">Community Meetups</a></li>
-              <li><a href="#!">Become an Affiliate</a></li>
-            </ul>
-          </div>
-
-          <div class="footer__col footer__col-menu">
-            <div class="footer__col-title">Need Help?</div>
-            <ul class="footer__col-list">
-              <li><a href="#!">Help Center</a></li>
-              <li><a href="#!">Foxtar Market Terms</a></li>
-              <li><a href="#!">Author Terms</a></li>
-              <li><a href="#!">Foxtar Licenses</a></li>
-              <li><a href="#!">Contact Us</a></li>
-            </ul>
-          </div>
-
-          <div class="footer__col">
-            <div class="footer__col-title">Follow Us On</div>
-            <ul class="footer__social-link">
-              <li><a class="link-fb" href="#!"></a></li>
-              <li><a class="link-tw" href="#!"></a></li>
-              <li><a class="link-yt" href="#!"></a></li>
-              <li><a class="link-pin" href="#!"></a></li>
-              <li><a class="link-lin" href="#!"></a></li>
-            </ul>
-            <div class="footer__form">
-              <div class="footer__form-title">Newsletter Sign Up!</div>
-              <form action="">
-                <input type="text" placeholder="E-mail Address">
-                <button type="submit"></button>
-              </form>
-            </div>
-          </div>
-
         </div>
-      </div>
-      <div class="footer__copy">
-        <div class="container">
-          <div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
-            respective owners.</div>
-        </div>
-      </div>
+      </section>
+
+
+
+
     </div>
-  </footer>
+    <!-- //////////footer//////// -->
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="container">
+          <div class="footer__inner">
+            <div class="footer__col">
+              <div class="footer__col-title">About Company</div>
+              <div class="footer__col-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
+                disse.Fusce sit amet urna iat.Praesent vel rutrum purus. </div>
+              <div class="footer__info">PO Box 16122 Collins Street West
+                Victoria 8007 Australia</div>
+              <a class="footer__info footer-phone" href="tel:61383766284">+61 3 8376 6284</a>
+            </div>
+
+            <div class="footer__col footer__col-menu">
+              <div class="footer__col-title">Join Our Community</div>
+              <ul class="footer__col-list">
+                <li><a href="#!">Home</a></li>
+                <li><a href="#!">Forums</a></li>
+                <li><a href="#!">Become an Author</a></li>
+                <li><a href="#!">Community Meetups</a></li>
+                <li><a href="#!">Become an Affiliate</a></li>
+              </ul>
+            </div>
+
+            <div class="footer__col footer__col-menu">
+              <div class="footer__col-title">Need Help?</div>
+              <ul class="footer__col-list">
+                <li><a href="#!">Help Center</a></li>
+                <li><a href="#!">Foxtar Market Terms</a></li>
+                <li><a href="#!">Author Terms</a></li>
+                <li><a href="#!">Foxtar Licenses</a></li>
+                <li><a href="#!">Contact Us</a></li>
+              </ul>
+            </div>
+
+            <div class="footer__col">
+              <div class="footer__col-title">Follow Us On</div>
+              <ul class="footer__social-link">
+                <li><a class="link-fb" href="#!"></a></li>
+                <li><a class="link-tw" href="#!"></a></li>
+                <li><a class="link-yt" href="#!"></a></li>
+                <li><a class="link-pin" href="#!"></a></li>
+                <li><a class="link-lin" href="#!"></a></li>
+              </ul>
+              <div class="footer__form">
+                <div class="footer__form-title">Newsletter Sign Up!</div>
+                <form action="">
+                  <input type="text" placeholder="E-mail Address">
+                  <button type="submit"></button>
+                </form>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="footer__copy">
+          <div class="container">
+            <div class="footer__copy-text">© 2017 Foxtar market place. Trademarks and brands are the property of their
+              respective owners.</div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
 
 
