added 404, about, contact pages

--- a/app/contact.html
+++ b/app/contact.html
@@ -210,34 +210,65 @@
 					</div>
 				</div>
 			</section>
-			<!-- ////////////breadcrumbs///////////// -->
-			<div class="breadcrumbs">
-				<div class="container">
-					<div class="breadcrumbs__inner">
-						<ul class="breadcrumbs__list">
-							<li><a href="#!">Home</a></li>
-							<li><span>Product Page</span></li>
-						</ul>
-					</div>
-				</div>
-			</div>
+			<!-- ////////////contact__page///////////// -->
+			<section class="contact__page">
 
-			<div class="page-404">
-				<div class="container">
-					<div class="page-404__wrapper">
-						<div class="page-404__head">Error Page</div>
-						<div class="page-404__inner">
-							<div class="page-404__404">404</div>
-							<div class="page-404__content">
-								<div class="page-404__title">Sorry Page Was Not Found</div>
-							<div class="page-404__text">The page you are looking is not available or has been removed.
-								Try going to Home Page by using the button below.</div>
-							<a class="page-404__link" href="#!">Go To Home Page</a>
-							</div>							
+				<!-- ////////////breadcrumbs///////////// -->
+				<div class="breadcrumbs">
+					<div class="container">
+						<div class="breadcrumbs__inner">
+							<ul class="breadcrumbs__list">
+								<li><a href="#!">Home</a></li>
+								<li><span>Contact US</span></li>
+							</ul>
 						</div>
 					</div>
 				</div>
-			</div>
+				<div class="contact">
+					<div class="container">
+						<div class="contact__wrapper">
+							<div class="contact__head">Contact With Us</div>
+							<div class="contact__inner">
+								<div class="contact__map">
+									<iframe
+										src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3741.3909913734287!2d35.043992379091215!3d48.46491480546454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbe303fd08468f%3A0xa1cf3d5f2c11aba!2z0JTQvdC40L_RgNC-LCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNDkwMDA!5e0!3m2!1sru!2sua!4v1573639424694!5m2!1sru!2sua"
+										frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
+								<div class="contact__box">
+									<div class="contact__info">
+										<div class="contact__info-item">
+											<div class="contact__info-title icon-map-marker ">Our Office Address</div>
+											<div class="contact__info-content">PO Box 16122 Collins Street West
+												Victoria 8007 Australia</div>
+										</div>
+										<div class="contact__info-item">
+											<div class="contact__info-title icon-phone">Phone
+
+											</div>
+											<a href="tel:61383766284" class="contact__info-content ">+61 3 8376 6284</a>
+										</div>
+										<div class="contact__info-item">
+											<div class="contact__info-title icon-envelope-o">E-mail</div>
+											<div class="contact__info-content">info@foxtar.com</div>
+										</div>
+									</div>
+									<div class="contact__form">
+										<div class="contact__form-title">Drop Us A Message </div>
+										<form>
+											<div class="contact__form-row">
+												<input type="text" placeholder="Name*" required>
+												<input type="text" placeholder="Email*" required>
+											</div>
+											<textarea placeholder="Message*" required></textarea>
+											<button class="contact__btn" type="submit">Send Message</button>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 
 
 
