--- a/app/about.html
+++ b/app/about.html
@@ -210,34 +210,47 @@
 					</div>
 				</div>
 			</section>
-			<!-- ////////////breadcrumbs///////////// -->
-			<div class="breadcrumbs">
+			<!-- ////////////about__page///////////// -->
+			<section class="about__page">
+
+				<!-- ////////////breadcrumbs///////////// -->
+				<div class="breadcrumbs">
 				<div class="container">
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#!">Home</a></li>
-							<li><span>Product Page</span></li>
+							<li><span>About US</span></li>
 						</ul>
 					</div>
 				</div>
 			</div>
-
-			<div class="page-404">
+			<div class="about">
 				<div class="container">
-					<div class="page-404__wrapper">
-						<div class="page-404__head">Error Page</div>
-						<div class="page-404__inner">
-							<div class="page-404__404">404</div>
-							<div class="page-404__content">
-								<div class="page-404__title">Sorry Page Was Not Found</div>
-							<div class="page-404__text">The page you are looking is not available or has been removed.
-								Try going to Home Page by using the button below.</div>
-							<a class="page-404__link" href="#!">Go To Home Page</a>
-							</div>							
+					<div class="about__wrapper">
+						<div class="about__head">To Know Who We Are</div>
+						<div class="about__inner">						
+							<div class="about__content">
+								<div class="about__title">What We Do</div>
+							<div class="about__text">when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived  
+								but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas survived not  raseth
+								leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen 
+								book. It has survived not only five centurbut a vfrrdyrtfglso survived  but also the leap into electronic typesetting, remaining essentially unchanged. It was po
+								pularised in the 1960s with the releas survived not  rasethleap into electronic typesetting, remaining essentially unchanged. </div>						
+							</div>		
+							<div class="about__content">
+								<div class="about__title">Our Mission</div>
+							<div class="about__text">when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived  
+								but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas survived not  raseth
+								leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen 
+								book. It has survived not only five centurbut a vfrrdyrtfglso survived  but also the leap into electronic typesetting, remaining essentially unchanged. It was po
+								pularised in the 1960s with the releas survived not  rasethleap into electronic typesetting, remaining essentially unchanged. </div>						
+							</div>					
 						</div>
 					</div>
 				</div>
 			</div>
+			</section>
+			
 
 
 
