pages profile, product-one, settings, upload'

--- a/app/profile.html
+++ b/app/profile.html
@@ -190,9 +190,9 @@
 						</nav>
 					</div>
 				</div>
-			</header>					
+			</header>
 			<!-- //////////search//////// -->
-			<section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
+			<section class="prifile" style="background-image: url(images/srh_bg.jpg);">
 				<div class="container">
 					<div class="search__inner ">
 						<div class="search__inner-text">Premium WordPress Themes, Web Templates and Many More ...</div>
@@ -209,9 +209,8 @@
 					</div>
 				</div>
 			</section>
-			<!-- ////////////contact__page///////////// -->
-			<section class="contact__page">
-
+			<!-- ////////////profile__page///////////// -->
+			<section class="profile">
 				<!-- ////////////breadcrumbs///////////// -->
 				<div class="breadcrumbs">
 					<div class="container">
@@ -223,8 +222,138 @@
 						</div>
 					</div>
 				</div>
+				<div class="container">
+					<div class="profile__inner">
+						<div class="profile__aside">
+							<div class="category aside__item">
+								<div class="aside__title">Product Author</div>
+								<div class="product-author__box">
+									<div class="author__avatar">
+										<img src="images/content/avatar.jpg" alt="">
+									</div>
+									<div class="author__info">
+										<span class="author__name">PsdBoss</span>
+										<div class="profile-status profile-on">Online</div>
+									</div>
+								</div>
+								<ul class="author__awards-list">
+									<li class="icon-meh-o"></li>
+									<li class="icon-pagelines"></li>
+									<li class="icon-foursquare"></li>
+									<li class="icon-flash"></li>
+									<li class="icon-yen"></li>
+								</ul>
+							</div>
+							<div class="profile__aside-links">
+								<ul class="footer__social-link profile-social">
+									<li><a class="link-fb" href="#!"></a></li>
+									<li><a class="link-tw" href="#!"></a></li>
+									<li><a class="link-yt" href="#!"></a></li>
+									<li><a class="link-lin" href="#!"></a></li>
+								</ul>
+								<div class="profile__aside-btn">
+									<a href="#!" class="profile__aside-message">Send Message</a>
+									<a href="#!" class="profile__aside-follow">Following</a>
+								</div>
+							</div>
+						</div>
 
-			</section>	
+						<div class="profile__content">
+							<div class="profile__banner">
+								<div class="profile__banner-img">
+								</div>
+							</div>
+							<div class="profile__items">
+								<div class="profile__item">
+									<div class="profile__item-title">Country:</div>
+									<div class="profile__item-content">England</div>
+								</div>
+								<div class="profile__item">
+									<div class="profile__item-title">Member Since:</div>
+									<div class="profile__item-content">December 26, 2014</div>
+								</div>
+								<div class="profile__item">
+									<div class="profile__item-title">Author Rating:
+									</div>
+									<div class="profile__item-content">
+										<div class="product__item-star">
+											<div class="rate-star"></div>(<span>05</span>)
+										</div>
+									</div>
+								</div>
+								<div class="profile__item">
+									<div class="profile__item-title">Total Sales:</div>
+									<div class="profile__item-content">Total Sales:
+										$ 5,030
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+					</div>
+					<!-- ////////////personal-box///////////// -->
+					<div class="personal__box">
+						<div class="personal__box-title">About Me: </div>
+						<div class="personal__box-text">
+							<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+								standard
+								dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+								make a
+								type specimen book. It has survived not only five centuries, but also the leap into electronic.</p>
+						</div>
+						<div class="personal__box-skills">
+							<div class="personal__box-title">Skills: </div>
+							<div class="skills__item">
+								<div class="skills__item-head">
+									<div class="skills__item-type">Graphic Design </div>
+									<div class="skills__item-procent">80%</div>
+								</div>
+								<div class="skills__item-line">
+									<span style="max-width: 80%"></span>
+								</div>
+							</div>
+							<div class="skills__item">
+								<div class="skills__item-head">
+									<div class="skills__item-type">WordPress</div>
+									<div class="skills__item-procent">90%</div>
+								</div>
+								<div class="skills__item-line">
+									<span style="max-width: 90%"></span>
+								</div>
+							</div>
+
+							<div class="skills__item">
+								<div class="skills__item-head">
+									<div class="skills__item-type">Joomla</div>
+									<div class="skills__item-procent">70%</div>
+								</div>
+								<div class="skills__item-line">
+									<span style="max-width: 70%"></span>
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+
+		</div>
+
+		</section>
+		<!-- ////////////profile-settings///////////// -->
+		<div class="settings profile-settings">
+			<!-- ////////////tab-content///////////// -->
+			<div class="tab__content">
+			</div>
+
+
+
+
+
+
+
+
+
 
 		</div>
 		<!-- //////////footer//////// -->
