--- a/app/upload.html
+++ b/app/upload.html
@@ -190,7 +190,7 @@
 						</nav>
 					</div>
 				</div>
-			</header>					
+			</header>
 			<!-- //////////search//////// -->
 			<section class="search page-search" style="background-image: url(images/srh_bg.jpg);">
 				<div class="container">
@@ -209,22 +209,86 @@
 					</div>
 				</div>
 			</section>
-			<!-- ////////////contact__page///////////// -->
-			<section class="contact__page">
 
-				<!-- ////////////breadcrumbs///////////// -->
-				<div class="breadcrumbs">
-					<div class="container">
-						<div class="breadcrumbs__inner">
-							<ul class="breadcrumbs__list">
-								<li><a href="#!">Home</a></li>
-								<li><span>Contact US</span></li>
-							</ul>
-						</div>
+			<!-- ////////////breadcrumbs///////////// -->
+			<div class="breadcrumbs">
+				<div class="container">
+					<div class="breadcrumbs__inner">
+						<ul class="breadcrumbs__list">
+							<li><a href="#!">Home</a></li>
+							<li><span>Contact US</span></li>
+						</ul>
 					</div>
 				</div>
+			</div>
+			<!-- ////////////upload///////////// -->
+			<section class="upload">
+				<div class="container">
+					<form>
+						<div class="upload__inner">
+							<div class="upload__inner-title">Upload Your item</div>
+							<div class="upload__inner-content">								
+								<div class="upload__line">
+									<label for="">Select Categories<span>*</span></label>
+									<select required>
+											<option value="">Select</option>
+											<option value="">Select</option>
+											<option value="">Select</option>
+										</select>
+								</div>
+								<div class="upload__line">
+									<label for="">Product Name<span>*</span></label>
+									<input type="text" placeholder="Enter your product name here ..." required>
+								</div>
+								<div class="upload__line">
+									<label for="">Product Description<span>*</span></label>
+									<textarea placeholder="Type your text  here" required></textarea>
+								</div>
+								<div class="upload__line">
+									<label for="">Upload Main File<span>*</span></label>
+									<input type="file" required data-placeholder="No file Choosen" data-browse="Choose File" >
+								</div>
+								<div class="upload__line">
+									<label for="">Upload Screenshots<span>*</span></label>
+									<input type="file" required data-placeholder="No file Choosen" data-browse="Choose File">
+								</div>
+								<div class="upload__line">
+									<label for="">File Included<span>*</span></label>
+									<select required>
+											<option value="">Select File Type </option>
+											<option value="">.img</option>
+											<option value="">.jpg</option>
+											<option value="">PSD</option>
+										</select>
+								</div>
+								<div class="upload__line">
+									<label for="">File Dimensions<span>*</span></label>
+									<input type="text" placeholder="Enter the item  dimentionss here ..." required>
+								</div>
+								<div class="upload__line">
+									<label for="">Item Tags<span>*</span></label>
+									<input type="text" placeholder="Enter Tag Here" required>
+								</div>
+							</div>
+							<div class="upload__inner-title">Set Your Price (US$)</div>
+							<div class="upload__inner-content">
+								<div class="upload__line">
+									<label for="">Regular License<span>*</span></label>
+									<input type="text" placeholder="$00.00" required>
+								</div>
+								<div class="upload__line">
+									<label for="">Extended License<span>*</span></label>
+									<input type="text" placeholder="$00.00" required>
+								</div>
+								<button class="form__btn"  type="submit">Submit</button>
+							</div>
+						</div>
+					</form>
 
-			</section>	
+				</div>
+
+
+			</section>
 
 		</div>
 		<!-- //////////footer//////// -->
