--- a/app/contact.html
+++ b/app/contact.html
@@ -211,7 +211,7 @@
 				</div>
 			</section>
 			<!-- ////////////contact__page///////////// -->
-			<section class="contact__page">
+			<section class="main contact__page">
 
 				<!-- ////////////breadcrumbs///////////// -->
 				<div class="breadcrumbs">
@@ -224,6 +224,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="contact">
 					<div class="container">
 						<div class="contact__wrapper">
@@ -268,11 +269,7 @@
 					</div>
 				</div>
 			</section>
-
-
-
-
-
+			
 		</div>
 		<!-- //////////footer//////// -->
 		<footer class="footer">
